src/snapshots/pixi__virtual_packages__tests__test_get_minimal_virtual_packages.linux-64.snap
---
source: src/virtual_packages.rs
assertion_line: 186
expression: packages
---
[
    Unix,
    Linux(
        Linux {
            version: Version {
                version: [[0], [5], [10]],
                local: [],
            },
        },
    ),
    LibC(
        LibC {
            family: "glibc",
            version: Version {
                version: [[0], [2], [17]],
                local: [],
            },
        },
    ),
    Archspec(
        Archspec {
            spec: "x86_64",
        },
    ),
]
