src/snapshots/pixi__virtual_packages__tests__test_get_minimal_virtual_packages.linux-aarch64.snap
---
source: src/virtual_packages.rs
expression: packages
---
[
    Unix,
    Linux(
        Linux {
            version: Version {
                norm: Some(
                    "5.10",
                ),
                version: "[[0], [5], [10]]",
                local: "[]",
            },
        },
    ),
    LibC(
        LibC {
            family: "glibc",
            version: Version {
                norm: Some(
                    "2.17",
                ),
                version: "[[0], [2], [17]]",
                local: "[]",
            },
        },
    ),
    Archspec(
        Archspec {
            spec: "aarch64",
        },
    ),
]
