src/snapshots/pixi__virtual_packages__tests__test_get_minimal_virtual_packages.osx-64.snap
---
source: src/virtual_packages.rs
expression: packages
---
[
    Unix,
    Archspec(
        Archspec {
            spec: "x86_64",
        },
    ),
    Osx(
        Osx {
            version: Version {
                norm: "10.15",
                version: [[0], [10], [15]],
                local: [],
            },
        },
    ),
]
