src/snapshots/pixi__virtual_packages__tests__test_get_minimal_virtual_packages.osx-arm64.snap
---
source: src/virtual_packages.rs
expression: packages
---
[
    Unix,
    Archspec(
        Archspec {
            spec: "arm64",
        },
    ),
    Osx(
        Osx {
            version: Version {
                norm: Some(
                    "11.0",
                ),
                version: "[[0], [11], [0]]",
                local: "[]",
            },
        },
    ),
]
